@@ -1,3 +1,7 @@
+Sun Dec 14 17:10:35 2008  Google Inc. <opensource@google.com>
+	* google-perftools: version 1.0rc2 release
+	* Fix compile error on 64-bit systems (casting ptr to int) (csilvers)
+
 Thu Dec 11 16:01:32 2008  Google Inc. <opensource@google.com>
 
 	* google-perftools: version 1.0rc1 release
